add test and coverage check